# ddpt

./: .editorconfig  .gitignore  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTING.rst  LICENSE  Makefile  README.md  README.rst  cookiecutter.json  pyproject.toml
.github/: ISSUE_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  question-issue-template.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
hooks/: pre_gen_project.py
{{cookiecutter.django_project_name}}/: .coveragerc  .dockerignore  .editorconfig  .gitignore  Dockerfile  Makefile  README.md  README.rst  docker-compose.yml  entrypoint.sh  healthchecks.sh  manage.py
{{cookiecutter.django_project_name}}/deployment/: Makefile  README.md  db-migration.yml  docker-stack.caddy.yml  docker-stack.django.yml  docker-stack.postgres.yml  docker-stack.redis.yml
{{cookiecutter.django_project_name}}/deployment/caddy/: Caddyfile  Dockerfile
{{cookiecutter.django_project_name}}/deployment/django/: django-entrypoint.sh  django-healthcheck.sh
{{cookiecutter.django_project_name}}/deployment/provisioning/ansible/: Makefile  README.md  hosts.yml  site.yml
{{cookiecutter.django_project_name}}/requirements/: base.txt  dev.txt  test.txt
{{cookiecutter.django_project_name}}/{{cookiecutter.django_project_name}}/config/: base.py  local.py  production.py  test.py  urls.py  wsgi.py
{{cookiecutter.django_project_name}}/{{cookiecutter.django_project_name}}/core/: apps.py  urls.py  views.py
{{cookiecutter.django_project_name}}/{{cookiecutter.django_project_name}}/users/: admin.py  apps.py  models.py  views.py
(+13 files in other folders)
