[tool.poetry]
name = "ddpt"
version = "0.1.0"
description = "This is a template for Django Projects. Ready to run with Docker, with development and production settings."
authors = ["Douglas Miranda <douglascoding@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
black = {version = "^18.9b0",allows-prereleases = true}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
